- test language files for settings ui

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <string id="100000">Game DB</string>    
+    <string id="100000">Game DB</string>
+	<string id="100001">Log Level</string>
 </strings>
