--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -2,4 +2,5 @@
 <!-- German strings.xml by bootsy (bootsycollins82@gmail.com) -->
 <strings>
     <string id="100000">Game DB</string>
+	<string id="100001">Log Level</string>
 </strings>
