--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,21 @@
 
+0.7.4 (10/2010)
+~~~~~~~~~~~~~
+    * rework configuration
+		* don't import settings to database: all settings are read at startup from config.xml
+		* moved global settings to settings.xml (editable via addons settings ui)
+		* refacturing of config.xml
+	* only scrape information of games that are not in database
+	* bugfix: launch emulators with whitespaces in path
+
+0.7.3 (10/2010)
+~~~~~~~~~~~~~
+    * small fixes to scraping functionality
+	* new scraper: giantbomb.com
+
 0.7.2 (10/2010)
 ~~~~~~~~~~~~~
-    * Scraper support
+    * scraper support: thevideogamedb.com, mobygames.com
 
 0.6.1 (08/2010)
 ~~~~~~~~~~~~~
