update version to 0.7.10

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 
+0.7.10 (12/2010)
+~~~~~~~~~~~~~
+Online Scraping
+    * improvements to sequel and subtitle handling
+	
+
 0.7.9 (12/2010)
 ~~~~~~~~~~~~~
 Online Scraping
