--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,25 @@
 
+0.7.11 (12/2010)
+~~~~~~~~~~~~~
+General:
+    * Prevent download of multiple images: check if file is available with different extension
+    * bugfix: fallback images did not work in previous versions
+
+Xbox related:
+    * bugfix: Launching games on xbox was broken
+    * set correct RomCollection-properties on xbox (create shortcuts, ...)
+    * complete configuration can be done with the wizard (for roms and Xbox-games)
+
 0.7.10 (12/2010)
 ~~~~~~~~~~~~~
 Online Scraping
     * improvements to sequel and subtitle handling
-	
 
 0.7.9 (12/2010)
 ~~~~~~~~~~~~~
 Online Scraping
     * scraping game information and artwork from various online sources
-    * current available scrapers: thevideogamedb.com, thegamesdb.net, giantbomb.com, mobygames.com
+    * current available scrapers: thegamesdb.net, giantbomb.com, mobygames.com
     * scraped artwork types: boxfront, boxback, cartridge, screenshot and fanart
     * create local nfo files while scraping
     * option to reimport local nfo files (possibility to add or edit game properties)
