--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 
+0.8.1 (01/2011)
+~~~~~~~~~~~~~
+General:
+    * rework of Confluence Thumbs view
+
+Game Import:
+    * some fixes in MAME scraper
+
 0.8.0 (01/2011)
 ~~~~~~~~~~~~~
 General:
@@ -9,7 +17,7 @@ General:
 Game Import:
     * new scraper: maws.mameworld.info
 	* rework of progress dialog (info about current scraper and current action)
-    * stop import when action is canceled
+    * bugfix: stop import when action is canceled
 	
 Game Launching:
     * detect games in zip and 7z archives and ask user which game to load
