- switched to new tagged version 0.8.4 - bugfix: Add Rom Collection did not increment ids > 10

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.8.4 (04/2011)
+~~~~~~~~~~~~~
+General:
+    * bugfix: Add Rom Collection does not increment ids greater than 10
 
 0.8.3 (04/2011)
 ~~~~~~~~~~~~~
