--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.8.9 (06/2011)
+~~~~~~~~~~~~~
+General:
+  * Eden compatibility: use xbmc.service instead of autoexec.py to perform startup tasks
+  * use XBMC settings instead of status file to transfer status
 
 0.8.7 (05/2011)
 ~~~~~~~~~~~~~
