--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+0.8.10 (06/2011)
+~~~~~~~~~~~~~
+General:
+  * platform.machine() caused errors on some Linux systems 
+
+Game Import:
+  * updated scraper: thegamesdb.net
+
+
 0.8.9 (06/2011)
 ~~~~~~~~~~~~~
 General:
