--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.8.11 (06/2011)
+~~~~~~~~~~~~~
+General:
+  * bugfix: Edit Rom Collection dialog did not save changes in 0.8.10
+
 0.8.10 (06/2011)
 ~~~~~~~~~~~~~
 General:
@@ -5,7 +10,6 @@ General:
 
 Game Import:
   * updated scraper: thegamesdb.net
-
 
 0.8.9 (06/2011)
 ~~~~~~~~~~~~~
