--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.9.3 (10/2011)
+~~~~~~~~~~~~~
+Browse Games:
+  * support different skins for game info view
+  * don't reload game list when exiting game info view
+
 0.9.2 (10/2011)
 ~~~~~~~~~~~~~
 General:
