--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.9.8 (01/2012)
+~~~~~~~~~~~~~
+General:
+  * Add new action (backspace) to close dialogs
+
 0.9.7 (12/2011)
 ~~~~~~~~~~~~~
 General:
