--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+0.9.9 (02/2012)
+~~~~~~~~~~~~~
+General:
+  * refactoring: extract config wizard to separate module
+  * refactoring: remove Camelot compatibility code
+  * bugfix: remove and add rom collection in one turn causes errors
+  
+Import Games:
+  * bugfix: import dialog is empty after "Edit offline scraper"
+  
+Launch Games:
+  * bugfix: don't launch emulator if 7z file could not be extracted
+
 0.9.8 (02/2012)
 ~~~~~~~~~~~~~
 General:
