--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+1.0.5 (07/2012)
+~~~~~~~~~~~~~
+Import Games:
+  * "First 10 games could not be imported." -> option to continue and ignroe error (patch submitted by pantherts)
+  
+Launch Games:
+  * add before and after launch command (patch submitted by carabalb)
+  * select disk in multi disk scenario (patch submitted by pantherts)
+  * new option to use subprocess.Popen to launch emulators
+  * using %PROGRAMFILES% variable in applaunch.bat
+
 1.0.4 (05/2012)
 ~~~~~~~~~~~~~
 Import Games:
