--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -2,6 +2,14 @@
 <strings>
 	<!-- Error messages -->
     <string id="30000">Error: Can not access database.</string>
-	<string id="30001">No config file found.</string>
-	<string id="30002">Do you want to create one?</string>
+	
+	<!-- Hints / questions -->
+	<string id="40000">No config file found.</string>
+	<string id="40001">Do you want to create one?</string>
+	
+	<!-- GUI controls (need to be moved to skins strings.xml file) -->
+	<string id="50000">Year:</string>	
+	<string id="50001">Genre:</string>
+	<string id="50002">Publisher:</string>
+	<string id="50003">Developer:</string>
 </strings>
