--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -8,9 +8,9 @@
 	<string id="40001">Jetzt neu erstellen?</string>
 	
 	<!-- GUI controls (need to be moved to skins strings.xml file) -->
-	<string id="50000">Jahr:</string>
-	<string id="50001">Genre:</string>
-	<string id="50002">Publisher:</string>
-	<string id="50003">Entwickler:</string>
+	<string id="50000">Jahr</string>
+	<string id="50001">Genre</string>
+	<string id="50002">Herausgeber</string>
+	<string id="50003">Entwickler</string>
 	
 </strings>
