--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -7,9 +7,17 @@
 	<string id="40000">No config file found.</string>
 	<string id="40001">Do you want to create one?</string>
 	
-	<!-- GUI controls (need to be moved to skins strings.xml file) -->
-	<string id="50000">Year:</string>	
-	<string id="50001">Genre:</string>
-	<string id="50002">Publisher:</string>
-	<string id="50003">Developer:</string>
+	<!-- GUI controls -->
+	<string id="50000">Year</string>	
+	<string id="50001">Genre</string>
+	<string id="50002">Publisher</string>
+	<string id="50003">Developer</string>
+	<string id="50004">Favorites</string>
+	<string id="50005">Search</string>
+	<string id="50006">Console</string>
+	<string id="50007">A-Z</string>
+	<string id="50008">View</string>
+	<string id="50009">Filter missing infos</string>
+	<string id="50010">Items</string>
+	<string id="50011">Page</string>
 </strings>
